# py-espn-fantasy

./: .gitignore  .justfile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  weekly-report.yml
src/espn_fantasy/: __init__.py  cli.py  scores.py
